staging/sc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-dev
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc-dev
  template:
    metadata:
      labels:
        app: sc-dev
    spec:
      containers:
        - name: sc
          image: ghcr.io/cngei/sc:dev-e1c3388ef369828680690c00e06808fbd9fdb193
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
