staging/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sc-ingress
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api-dev.cngei.it`)
      services:
        - kind: Service
          name: sc-dev
          port: 8080
  tls:
    secretName: sc-dev-tls
