staging/mailcatcher-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sc-mail-ingress
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mail-dev.cngei.it`)
      services:
        - kind: Service
          name: mailcatcher-web
          port: 80
  tls:
    secretName: mailcatcher-dev-tls
